<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/all_background"
    >

    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/enter"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="31sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="180dp"
        />
    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="20dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="13dp"/>
    <EditText
        android:id="@+id/email"
        android:paddingStart="25dp"
        android:background="@drawable/edit"
        android:layout_width="355dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/text_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        android:backgroundTint="@color/white"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/pin"
        android:paddingStart="25dp"
        android:background="@drawable/edit"
        android:layout_width="355dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/pin"
        android:password="true"
        android:backgroundTint="@color/white"
        android:layout_marginTop="16dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_one"
        android:layout_width="355dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_name"
        android:layout_marginTop="13dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:backgroundTint="#808080"
        />
    <TextView
        android:id="@+id/text_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pin"
        app:layout_constraintTop_toBottomOf="@id/btn_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="140dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_click_here"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#D2691E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_one"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"/>











</androidx.constraintlayout.widget.ConstraintLayout>